traces/bug_506.txt
examples++-load/freeyams.cpp:572: error: DEAD_STORE
  The value written to &ksol (type int) is never used.
Showing all 1 steps of the trace


examples++-load/freeyams.cpp:572:8: Write of unused value
570.   	  type=1;
571.   	  nbsolsize=nbsolsize+1;
572.   	  sol[ksol++]=to<double>(args[i]);
              ^
573.   	} 
574.   
